@@ -8,6 +8,9 @@ Changelog
   ftw.contentstats logs.
   [lgraf]
 
+- Respect current umask when making scripts executable.
+  [buchi]
+
 
 1.3.0 (2017-09-11)
 ------------------
